Fixed message overflow elipsis

--- a/app/components/message-list/message-list.scss
+++ b/app/components/message-list/message-list.scss
@@ -1,3 +1,8 @@
-.toc-unread-message {
-  font-weight: bold;
+.toc-message {
+  white-space: inherit;
+  overflow: inherit;
+  text-overflow: inherit;
+  &.toc-unread-message {
+    font-weight: bold;
+  }
 }
